# tarik

./: .gitignore  .gitmodules  CMakeLists.txt  CONVENTION.md  LICENSE  README.md  logo_ig.xcf
docs/: README.md
docs/expressions/: README.md
docs/macros/: README.md
docs/statements/: Functions.md  If.md  Imports.md  README.md  Scopes.md  Structures.md  Types.md  While.md
examples/arguments/: Makefile  arguments.tk
examples/fib/: Makefile  fib.tk
examples/hello/: Makefile  hello.tk
examples/time/: Makefile  time.tk
lib/libc/: Temet.toml  libc.tk
lib/libc/src/: arg.tk  io.tk  lib.tk
src/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  System.cpp  System.h  Testing.cpp  Testing.h  Token.h  Version.h  main.cpp  testing.h
src/cli/: Arguments.cpp  Arguments.h  arguments.cpp  arguments.h
src/codegen/: LLVM.cpp  LLVM.h
src/error/: Bucket.cpp  Bucket.h  Error.cpp  Error.h
src/expressions/: Expression.h  Parslets.h  Statements.h  Types.h
src/lexical/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/libcomperr/: CMakeLists.txt  README.md  test.c
src/libcomperr/lib/: comperr.c  comperr.h
src/lifetime/: Analyser.cpp  Analyser.h  Variable.cpp  Variable.h
src/semantic/: Analyser.cpp  Analyser.h  Macro.cpp  Macro.h  Path.cpp  Path.h  Structures.cpp  Structures.h  Variables.cpp  Variables.h
src/semantic/ast/: Base.h  Expression.h  Statements.h
src/syntactic/: Parser.cpp  Parser.h  Types.cpp  Types.h
src/syntactic/ast/: Base.h  Expression.h  Parslets.h  Statements.h
src/syntactic/expressions/: Base.h  Expression.h  Parslets.h  Statements.h  Types.cpp  Types.h
src/testing/: TestMain.cpp  Testing.cpp  Testing.h
src/tlib/: Deserialise.cpp  Deserialise.h  Export.cpp  Export.h  Import.cpp  Import.h  Serialise.cpp  Serialise.h  TLibMain.cpp
src/utf/: Utf.cpp  Utf.h
src/util/: Util.cpp  Util.h
temet/: main.cpp
tests/failing/: eof0.tk  eof1.tk  lifetime_param.tk  lifetime_return.tk  lifetime_simple.tk  program.tk  scope.tk
tests/passing/: control.tk  func-decl.tk  lifetime_simple.tk  readme.tk  struct.tk
